tests/bad/func_bad_num_args.oc
/// fail: Unexpected argument, expected only 2

def foo(a: i32, b: i32): i32 {
    return a + b
}

def main() {
    foo(1, 2, 3)
}